# dkany

./: Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml  bumb_version.yml  deploy.yml  pipeline.yml  test.yml
scratch/: basic_run.py
scripts/: branch.sh  bump_version.sh  git_tag.sh  jupyter.sh  publish_package.sh  specific_test.sh  tag.sh  test.sh
src/dkany/: dataset.py  utils.py
src/dkany/client/: __init__.py  client.py  client.pyi  errors.py  types.py
src/dkany/data_hosts/: sftp.py
src/dkany/luigi/: luigi_utils.py
tests/: test_akamai.py  test_dkany.py  test_hello.py
