[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dkany/__about__.py"

[project]
dynamic = ["version"]
name = "dkany"
description = "A wrapper library around the DKAN API"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
authors = [
  { name="Peter Mariani", email="pmariani@mathematica-mpr.com" },
  { name="Drew McArthur", email="dmcarthur@mathematica-mpr.com" },
  { name="Tom Coile", email="tcoile@mathematica-mpr.com" },
]
requires-python = ">=3.9"
